src/objects/LG_Congatemplates__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>To store conga template Id ,report and query id&apos;s</description>
    <fields>
        <fullName>Billingaccaddtt__c</fullName>
        <label>Billingaccaddtt</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Authorizationtoport_Template__c</fullName>
        <description>Authorization to port Id</description>
        <label>Authorizationtoport Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountreportID__c</fullName>
        <description>Billing account report Id</description>
        <label>BillingAccountreportID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingaccountDD__c</fullName>
        <label>BillingaccountDD</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BinaryValueOne__c</fullName>
        <label>BinaryValueOne</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CC_CorresconInfoId__c</fullName>
        <description>Correspondence contact table</description>
        <label>CorresconInfoId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CC_SiteInfoID__c</fullName>
        <description>Site details table report Id</description>
        <label>SiteInfoID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CC_allproductsreportId__c</fullName>
        <description>all products and total contract value display table</description>
        <label>allproductsreportId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CC_opppricontrole__c</fullName>
        <description>opportunity primary contact role</description>
        <label>opppricontrole</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContractTemplateID__c</fullName>
        <description>To store template Id of Contract document</description>
        <label>ContractTemplateID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_DDMandate_Template__c</fullName>
        <description>To Store DD Document ID</description>
        <label>DDMandate Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_DataReportId__c</fullName>
        <description>Data product report ID</description>
        <label>DataReportId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_DataTCVQueryId__c</fullName>
        <description>DataTCV query ID</description>
        <label>DataTCVQueryId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Dataprop__c</fullName>
        <label>Dataprop</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MIAProp__c</fullName>
        <label>LG_MIAProp</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MIATotalQueryID__c</fullName>
        <label>MIATotalQueryID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MIA_Prod__c</fullName>
        <label>MIAReport</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MIA_report_Pd__c</fullName>
        <label>MIA report Pd</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MTMIAProp_Report_Pd__c</fullName>
        <label>MTMIAProp Report Pd</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MTMIA_Report_Pd__c</fullName>
        <label>MTMIA Report Pd</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MT_MIA_prop__c</fullName>
        <label>LG_MT-MIA prop</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MT_MIA_report_Id__c</fullName>
        <label>MT-MIA report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MobileReportID__c</fullName>
        <description>Mobile product report Id</description>
        <label>MobileReportID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MobileTCVQueryId__c</fullName>
        <description>MobileTCV query ID</description>
        <label>MobileTCVQueryId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Mobileprop__c</fullName>
        <label>Mobileprop</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_OpptyPBQueryID__c</fullName>
        <description>Opprotuinty product basket query ID</description>
        <label>OpptyPBQueryID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Order_report_Id__c</fullName>
        <description>order report template ID</description>
        <label>Order report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PropositionsID__c</fullName>
        <description>Propositions report Id</description>
        <label>PropositionsID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_SendContractDocValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendContractDocValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_SitesMappedId__c</fullName>
        <description>Site details report Id</description>
        <label>SitesMappedId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_TotalOneOffChargeId__c</fullName>
        <description>TotalOneOffCharge query id</description>
        <label>TotalOneOffChargeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VoiceAdditionalID__c</fullName>
        <description>Voice additional products report ID</description>
        <label>VoiceAdditionalID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VoiceInboundId__c</fullName>
        <description>VoiceInbound report Id</description>
        <label>VoiceInboundId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VoiceProductprop__c</fullName>
        <label>VoiceProductprop</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VoiceReportID__c</fullName>
        <description>Voice product report ID</description>
        <label>VoiceReportID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VoiceTCVId__c</fullName>
        <description>VoiceTCV query Id</description>
        <label>VoiceTCVId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Wayleave_for_LandLord__c</fullName>
        <description>Way leave for template document Id</description>
        <label>Wayleave for LandLord</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Wayleave_for_Tenant__c</fullName>
        <description>Wayleave for tenant document ID</description>
        <label>Wayleave for Tenant</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_dataprodfortable__c</fullName>
        <label>dataprodfortable</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_serviceFeatureReport__c</fullName>
        <label>service Feature Report</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_voicenoadd__c</fullName>
        <description>Voice products without voice additional</description>
        <label>LG_voicenoadd</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIAProp_ReportPD__c</fullName>
        <label>MIAProp ReportPD</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_MIA_Query_ID__c</fullName>
        <label>MT-MIA Query ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>service_Feature_prop__c</fullName>
        <label>service Feature prop</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Congatemplates</label>
</CustomObject>